	PR target/64055 	* tree-chkp.c (chkp_find_bound_slots_1): Allow non constant 	values in array domain.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@218207 138bc75d-0d04-0410-961f-82ee72b054a4